chore: create a dependency class to have an easier access to dependency fields inside generate classes